Updating README.md

--- a/index.ipynb
+++ b/index.ipynb
@@ -16,30 +16,7 @@
    "source": [
     "# madlibs-ml\n",
     "\n",
-    "> A MadLibs library using Hugging Face ML models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Install"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "pip install madlibs_ml\n",
-    "```"
+    "> A Python MadLibs game using Hugging Face transformers and pipelines"
    ]
   },
   {
@@ -53,35 +30,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "To run the game, run the following command:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "1+1"
+    "<code>python madlibs.py</code>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "When the game first loads, select a game mode by typing\n",
+    "    - 0 for auto (uses Hugging Face transformer and pipeline to generate text)\n",
+    "    - 1 for default (uses Hugging Face transformer, pipeline, and checklist editor to make a funny prompt)"
+   ]
   }
  ],
  "metadata": {
